# physics-eugene

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  flake.nix
demo/: CMakeLists.txt
demo/sandbox/: CMakeLists.txt
demo/sandbox/sbox/: layer.hpp  main.cpp
eugene/: CMakeLists.txt
eugene/gene/core/: alias.hpp  dimension.hpp  math.hpp  pch.hpp
eugene/gene/sph/: kernels.cpp  kernels.hpp
